@@ -1,3 +1,8 @@
+2015-01-13  William A. Perkins  <william.perkins@pnnl.gov>
+
+	* scalar_solve.f90 (apply_scalar_bc, scalar_solve): implement left
+	bank concentration BC's
+
 2015-01-06  William A. Perkins  <william.perkins@pnnl.gov>
 
 	* test/transport/mixing/Makefile: make parallel
